// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Button Danger 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-variant="Danger"
  >
    Danger
  </button>
</div>
`;

exports[`Storybook Tests Button Default 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
  >
    Button
  </button>
</div>
`;

exports[`Storybook Tests Button Disabled 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    disabled={true}
  >
    Disabled
  </button>
</div>
`;

exports[`Storybook Tests Button FullWidth 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-full-width={true}
  >
    Full width
  </button>
</div>
`;

exports[`Storybook Tests Button IsActive 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-active={true}
  >
    Active
  </button>
</div>
`;

exports[`Storybook Tests Button Navigation 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-variant="Navigation"
  >
    Navigation
  </button>
</div>
`;

exports[`Storybook Tests Button Overlay 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-variant="Overlay"
  >
    Overlay
  </button>
</div>
`;

exports[`Storybook Tests Button Primary 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-variant="Primary"
  >
    Primary
  </button>
</div>
`;

exports[`Storybook Tests Button Small 1`] = `
<div
  data-dark={false}
>
  <button
    className="charcoal-button"
    data-size="S"
  >
    Small
  </button>
</div>
`;
